--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -2,37 +2,29 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
 .App-header {
-  background-color: #282c34;
+  background-image: url('img/WhatsApp Image 2023-06-06 at 01.51.01.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  position: relative;
+
 }
 
-.App-link {
-  color: #61dafb;
+.navbar {
+  position: sticky;
+  top: 0;
+  z-index: 999;
+  opacity: 0.8;
+  /*background-color: #a1a4a6;*/
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-container {
+  background-color: #0d0d0d;
+}
+
+.autocomplete-dropdown-container {
+  position: absolute;
+  z-index: 999;
+  width: 100%;
 }
